# urlparselib

./: .gitignore  LICENSE.txt  README.rst  pyproject.toml  tox.ini
src/urlparselib/: querystring.py
tests/: test_querystring.py
